# Ride_Chatbot

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: chat.py  deps.py  drivers.py  trips.py  ws.py
app/chatbot/: __init__.py  engine.py  prompts.py  tools.py
app/chatbot/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  mock_provider.py  openai_provider.py
app/db/: __init__.py  models.py  seed.py  session.py
app/events/: __init__.py  bus.py
app/schemas/: chat.py
app/services/: geo_utils.py  geocoding.py  matching.py  pricing.py  simulator.py  trips.py
data/: drivers_seed.json  landmarks.json  vehicles.json
tests/: conftest.py  test_chat_flow.py  test_geocoding.py  test_groq_provider.py  test_matching.py  test_pricing.py  test_tools.py
